Settings: Double tap to trigger doze [2/2]
* Also adapt Add video to Double tap to trigger doze from Pie: https://github.com/Evolution-X/packages_apps_Settings/commit/a66601a6d41e7cd49efe68d294f9c10491621c16

Change-Id: Id98543542db937c6cc1f176cd55f6b02e472849d

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3310,7 +3310,7 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
             <meta-data android:name="com.android.settings.FRAGMENT_CLASS"
-                android:value="com.evolution.settings.fragments.GamingMode" />
+                android:value="com.stag.horns.fragments.GamingMode" />
         </activity>
 
         <!-- This is the longest AndroidManifest.xml ever. -->
