--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3346,6 +3346,18 @@
                 android:value="com.android.settings.preference.DisplayRotation" />
         </activity>
 
+        <!-- SmartPixels activity. -->
+        <activity android:name="Settings$SmartPixelsActivity"
+                android:label="@string/smart_pixels_title"
+                android:excludeFromRecents="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+            <meta-data android:name="com.android.settings.FRAGMENT_CLASS"
+                android:value="com.stag.horns.fragments.SmartPixels" />
+        </activity>
+
         <!-- This is the longest AndroidManifest.xml ever. -->
     </application>
 </manifest>
